--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -69,4 +69,28 @@ body {
   body {
     @apply bg-background text-foreground;
   }
+
+  h1 {
+    @apply scroll-m-20 text-6xl font-extrabold tracking-tight md:text-[5rem];
+  }
+
+  h2 {
+    @apply scroll-m-20 pb-2 text-4xl font-semibold tracking-tight first:mt-0;
+  }
+
+  h3 {
+    @apply scroll-m-20 text-2xl font-semibold tracking-tight;
+  }
+
+  h4 {
+    @apply scroll-m-20 text-xl font-semibold tracking-tight;
+  }
+
+  p {
+    @apply leading-7 [&:not(:first-child)]:mt-6;
+  }
+
+  section {
+    @apply [&:not(:first-child)]:my-16;
+  }
 }
