add what we do section

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -86,11 +86,11 @@ body {
     @apply scroll-m-20 text-xl font-semibold tracking-tight;
   }
 
-  p {
+  /* p {
     @apply leading-7 [&:not(:first-child)]:mt-6;
-  }
+  } */
 
   section {
-    @apply [&:not(:first-child)]:my-16;
+    @apply [&:not(:first-child)]:my-20;
   }
 }
