--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,9 +18,11 @@ body {
     --popover: 120 33% 99%;
     --popover-foreground: 240 10% 3.9%;
     /* --primary: 142.1 76.2% 36.3%; */
-    --primary: 135 28% 60%;
-    --primary-foreground: 240 5.9% 10%;
+    --primary: 208 43% 51%;
+    /* --primary: 135 28% 60%; */
+    /* --primary-foreground: 240 5.9% 10%; */
     /* --primary-foreground: 355.7 100% 97.3%; */
+    --primary-foreground: 120 33% 99%;
     --secondary: 240 4.8% 95.9%;
     --secondary-foreground: 240 5.9% 10%;
     --muted: 240 4.8% 95.9%;
@@ -29,10 +31,13 @@ body {
     --accent-foreground: 240 5.9% 10%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
-    --border: 240 5.9% 90%;
-    --input: 240 5.9% 90%;
+    /* --border: 240 5.9% 90%; */
+    --border: 186 76% 92%;
+    /* --input: 240 5.9% 90%; */
+    --input: 194 48% 79%;
     /* --ring: 142.1 76.2% 36.3%; */
-    --ring: 135 28% 60%;
+    /* --ring: 135 28% 60%; */
+    --ring: 208 43% 51%;
     --radius: 0.5rem;
     --chart-1: 12 76% 61%;
     --chart-2: 173 58% 39%;
