--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -78,6 +78,7 @@ body {
   * {
     @apply border-border;
   }
+
   body {
     @apply bg-background text-foreground;
   }
@@ -105,4 +106,12 @@ body {
   /* p {
     @apply leading-7 [&:not(:first-child)]:mt-6;
   } */
+
+  input[type='number']::-webkit-outer-spin-button,
+  input[type='number']::-webkit-inner-spin-button,
+  input[type='number'] {
+    -webkit-appearance: none;
+    margin: 0;
+    -moz-appearance: textfield !important;
+  }
 }
